--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,8 +7,7 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
+  overflow: hidden;
 
   &.large {
     height: 380px;
@@ -22,6 +21,26 @@
     margin-left: 0.5rem;
   }
 
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .content {
+      opacity: 0.9;
+    }
+  }
+
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
     height: 5.65rem;
     padding: 0 1.6rem;
@@ -30,6 +49,13 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    position: absolute; // this works because of display flex with center in the parent menu-item class
+    // top: auto;
+    // bottom: auto;
+    // left: auto;
+    // right: auto;
 
     & .title {
       font-weight: bold;
