--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   padding: 1.25rem 3.75rem;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
