Implemented custom form-input and button components for sign-in page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Sofia', cursive, sans-serif;
+  font-size: 1rem;
   padding: 1.25rem 3.75rem;
 }
 
